fixed dark mode bug in featured component

--- a/src/app/posts/[slug]/singlePage.module.css
+++ b/src/app/posts/[slug]/singlePage.module.css
@@ -100,19 +100,6 @@
   }
 }
 
-/* .skeleton {
-  animation: skeleton-loading 1s linear infinite alternate;
-} */
-/* 
-@keyframes skeleton-loading {
-  0% {
-    background-color: hsl(200, 20%, 70%);
-  }
-
-  100% {
-    background-color: hsl(200, 20%, 95%);
-  }
-} */
 
 .skeleton {
   background-color: var(--loading-back-col);
